--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,12 @@
 
 body {
-  background: #F3F4FA;
+  background: #F3F4FA !important;
   color: #777;
   font-family: Montserrat, Arial, sans-serif;
 }
 
-.body-bg {
-  background: #F3F4FA !important;
-}
-
 h1, h2, h3, h4, h5, h6, strong {
   font-weight: 600;
-}
-
-body {
-  /*background: linear-gradient(45deg,#3a3a60,#5f5f8e);
-  min-height: 100vh;*/
 }
 
 #area-adwords {
@@ -55,11 +46,11 @@ body {
 
 
 .sparkboxes .box1 {
-  border-bottom: 3px solid #734CEA
+  border-bottom: 3px solid #734CEA;
 }
 
 .sparkboxes .box2 {
-  border-bottom: 3px solid #34bfa3
+  border-bottom: 3px solid #34bfa3;
 }
 
 .sparkboxes .box3 {
@@ -68,6 +59,18 @@ body {
 
 .sparkboxes .box4 {
   border-bottom: 3px solid #00c5dc;
+}
+
+.sparkboxes .box5 {
+  border-bottom: 3px solid #f8c048;
+}
+
+.sparkboxes .box6 {
+  border-bottom: 3px solid #065c8b;
+}
+
+.sparkboxes .box7 {
+  border-bottom: 3px solid #f38212;
 }
 
 .spinner-border {
